--- a/system/templates/blog/rss_post.html
+++ b/system/templates/blog/rss_post.html
@@ -1,7 +1,7 @@
         <item>
            <title><perch:blog id="postTitle" /></title>
-           <link>http://example.com<perch:blog id="postURL" /></link>
-           <guid>http://example.com<perch:blog id="postURL" /></guid>
-           <description><![CDATA[<perch:blog id="excerpt" encode="false" />]]></description>
+           <link>http://thatemil.com<perch:blog id="postURL" /></link>
+           <guid>http://thatemil.com<perch:blog id="postURL" /></guid>
+           <description><![CDATA[<perch:blog id="postDescHTML" type="textarea" markdown="true" />]]></description>
            <pubDate><perch:blog id="postDateTime" format="D, d M Y H:i:s O" /></pubDate>
         </item>
