Added RSS link in post footer.

--- a/system/templates/blog/post.html
+++ b/system/templates/blog/post.html
@@ -42,7 +42,7 @@
         </perch:if>
         <perch:blog id="postTags" />
         
-        <p class="entry-meta">If you'd like to continue the conversation elsewhere: get in touch on <a href="http://twitter.com/thatemil" rel="me">Twitter (@thatemil)</a> (or, <a href="http://twitter.com/emilbjorklund" hreflang="sv">sporadically in Swedish as @emilbjorklund</a>) or send an email to emil at this domain.</p>
+        <p class="entry-meta">If you'd like to continue the conversation elsewhere: get in touch on <a href="http://twitter.com/thatemil" rel="me">Twitter (@thatemil)</a> (or, <a href="http://twitter.com/emilbjorklund" hreflang="sv">sporadically in Swedish as @emilbjorklund</a>) or send an email to emil at this domain. There is also an <a href="http://feeds.feedburner.com/thatemil-blog">RSS feed</a>.</p>
     </footer>
     
 </article>
