--- a/system/templates/blog/post.html
+++ b/system/templates/blog/post.html
@@ -3,7 +3,7 @@
         <h1 class="hd-entry"><perch:blog id="postTitle" type="text" size="xl" /></h1>
         <p class="entry-meta entry-date">
             <time datetime="<perch:blog id="postDateTime" format="%Y-%m-%dT%H:%M+01:00" />">
-            Published on <a class="entry-month" rel="directory" href="/blog/<perch:blog id="postDateTime" format="%Y/%m/%d" />/"><perch:blog id="postDateTime" format="%d" /></a> <a class="entry-day" rel="directory" href="/blog/<perch:blog id="postDateTime" format="%Y/%m" />/"><perch:blog id="postDateTime" format="%B" /></a>, <a rel="directory" class="entry-year" href="/blog/<perch:blog id="postDateTime" format="%Y" />/"><perch:blog id="postDateTime" format="%Y" /></a>, at <perch:blog id="postDateTime" format="%H:%M %p" />
+            Published by Emil Björklund on <a class="entry-month" rel="directory" href="/blog/<perch:blog id="postDateTime" format="%Y/%m/%d" />/"><perch:blog id="postDateTime" format="%d" /></a> <a class="entry-day" rel="directory" href="/blog/<perch:blog id="postDateTime" format="%Y/%m" />/"><perch:blog id="postDateTime" format="%B" /></a>, <a rel="directory" class="entry-year" href="/blog/<perch:blog id="postDateTime" format="%Y" />/"><perch:blog id="postDateTime" format="%Y" /></a>, at <perch:blog id="postDateTime" format="%H:%M %p" />
             </time> 
         </p>
     </header>
