--- a/assets/css/thatemil.css
+++ b/assets/css/thatemil.css
@@ -5,7 +5,7 @@ body {
 	color: #322c2a;
 	margin: 0;
 	padding: 0;
-	font-family: Poly, Constantia, "Lucida Bright", Lucidabright, Lucida, georgia, serif;
+	font-family: Constantia, "Lucida Bright", Lucidabright, Lucida, georgia, serif;
 	font-size: 100%;
 }
 /* Increase base font size when viewport gets wider: */
@@ -50,15 +50,16 @@ h2 {
 hr {
 	border: 0;
 	border-top: 1px solid #ccc;
-	margin-bottom: 1.4444em;
+	margin-bottom: 1.5em;
 }
 p, li {
-	line-height: 1.4444;
+	line-height: 1.5;
 }
 p {
 	margin-top: 0;
-	margin-bottom: 1.4444em;
+	margin-bottom: 1.5em;
 }
+
 .lede {
 	font-size: 1.222223em;
 	line-height: 1.590909091;
@@ -66,20 +67,37 @@ p {
 a {
 	color: #006C7F;
 }
-code, pre {
+code, pre, samp {
 	font-family: Consolas, "Liberation Mono", Courier, monospace;
 }
-code {
-	padding: 0 0.1em;
+code, samp {
+	padding: .3em 0 .1em;
+	background-color: transparent;
 	background-color: rgba(243,193,58, 0.1);
-	font-size: 77.7777778%;
+	font-size: 87.5%;
 }
 pre {
-	margin: 0;
+	margin: 0 0 1.5em;
 	padding: 0;
 }
+pre code {
+	padding: 0;
+}
+
 main,article,section,header,footer,figure,figcaption {
 	display: block;
+}
+@media screen and (min-width: 56em) {
+	p, li {
+		line-height: 1.4444;
+		margin-bottom: 1.4444em;
+	}
+	hr {
+		margin-bottom: 1.4444em;
+	}
+	pre {
+		margin-bottom: 1.4444em;
+	}
 }
 
 /* hack to fix whitespace problem with comma separated lists on multiple lines... */
@@ -277,6 +295,18 @@ main,article,section,header,footer,figure,figcaption {
 .hd-entry {
 	text-align: center;
 }
+@media screen and (max-width: 38em) {
+	.hd-entry {
+		font-size: 32px;
+		font-size: 2rem;
+	}
+}
+@media screen and (max-width: 28em) {
+	.hd-entry {
+		font-size: 24px;
+		font-size: 1.5rem;
+	}
+}
 .hd-entry a {
 	text-decoration: none;
 }
@@ -435,11 +465,17 @@ figure {
 /* @group Code blocks */
 .code-block {
 	overflow: auto;
+	max-width: 100%;
+	padding: 0.5em;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 	color: #333;
 	background-color: #fefefe;
 	background-color: rgba(243,193,58, 0.1);
-	padding: 18px;
 	box-shadow: inset 0 0 .5em rgba(0,0,0,0.2);
+}
+.code-block code {
+	background-color: transparent;
 }
 /* @end Code blocks */
 
