Removed unused web-font classes (.wf).

--- a/system/templates/blog/post_list_items.html
+++ b/system/templates/blog/post_list_items.html
@@ -2,7 +2,7 @@
     
     <h2 class="hd-entry wf"><a href="<perch:blog id="postURL" />" rel="bookmark" class="entry-title"><perch:blog id="postTitle" /></a></h2>
 
-    <p class="entry-date entry-meta wf"><time datetime="<perch:blog id="postDateTime" format="%Y-%m-%dT%H:%M+01:00" />"><perch:blog id="postDateTime" format="%d %B %Y" /></time></p>
+    <p class="entry-date entry-meta"><time datetime="<perch:blog id="postDateTime" format="%Y-%m-%dT%H:%M+01:00" />"><perch:blog id="postDateTime" format="%d %B %Y" /></time></p>
     
     <div class="entry-summary entry-body wf">
     
