--- a/system/templates/blog/category_link.html
+++ b/system/templates/blog/category_link.html
@@ -6,6 +6,6 @@
 <perch:else />
 	<perch:if id="perch_item_index" match="gt" value="1"><span class="comma">, </span></perch:if>
 </perch:if>
-	<a rel="category directory" href="/blog/category/<perch:blog id="categorySlug" />"><perch:blog id="categoryTitle" /></a>
+	<a class="p-category" rel="category directory" href="/blog/category/<perch:blog id="categorySlug" />"><perch:blog id="categoryTitle" /></a>
 
 <perch:after></p></perch:after>
