--- a/system/templates/blog/post_in_list.html
+++ b/system/templates/blog/post_in_list.html
@@ -1,6 +1,6 @@
 <perch:before>
 <section>
-<ul class="entry-list wf ui-list"></perch:before>
+<ul class="entry-list wf ui-list h-feed"></perch:before>
     <perch:template path="blog/post_list_items.html" />
 <perch:after>
     </ul>
