Adding class for entry-body back in.

--- a/system/templates/blog/post_list_items.html
+++ b/system/templates/blog/post_list_items.html
@@ -4,7 +4,7 @@
 
     <p class="entry-date entry-meta"><time class="dt-published" datetime="<perch:blog id="postDateTime" format="%Y-%m-%dT%H:%M+01:00" />"><perch:blog id="postDateTime" format="%d %B %Y" /></time></p>
     
-    <div class="entry-summary p-summary wf">
+    <div class="entry-summary entry-body p-summary wf">
     
     <perch:if exists="image">
     <figure class="entry-figure">
