--- a/system/addons/apps/perch_blog/templates/blog/author_list.html
+++ b/system/addons/apps/perch_blog/templates/blog/author_list.html
@@ -11,9 +11,13 @@
 			    	<perch:blog id="authorGivenName" type="text" label="Given name" /> 
 			    	<perch:blog id="authorFamilyName" type="text" label="Given name" /> 
 				</a>
+				
 			</h2>
 
 			<perch:blog id="author_biog" type="textarea" label="Biography" textile="true" editor="markitup" />
+
+			<p><a href="/blog/archive.php?author=<perch:blog id="authorSlug" type="text" />"><perch:blog id="authorPostCount" /> 
+				<perch:if id="authorPostCount" match="gt" value="1">posts<perch:else />post</perch:if></a></p>
 		</div>
 	</li>
 <perch:after>
