--- a/system/addons/apps/perch_blog/templates/blog/post_in_list.html
+++ b/system/addons/apps/perch_blog/templates/blog/post_in_list.html
@@ -11,10 +11,10 @@
     </li>
 <perch:after>
     </ul>
-
     <perch:if exists="paging">
         <div class="paging">
             Page <perch:blog id="current_page" /> of <perch:blog id="number_of_pages" />
+            <perch:blog id="page_links" encode="false" />
             <perch:if exists="not_first_page">
                 <a href="<perch:blog id="prev_url" encode="false" />">Previous</a>
             </perch:if>
