Added html=true to template. Not sure if good. WTH.

--- a/system/templates/blog/post.html
+++ b/system/templates/blog/post.html
@@ -33,7 +33,7 @@
         </div>
         </perch:if>
 
-        <perch:blog id="postDescHTML" order="2" type="textarea" encode="false" editor="markitup" markdown="true" size="xxl" />
+        <perch:blog id="postDescHTML" order="2" type="textarea" encode="false" html="true" editor="markitup" markdown="true" size="xxl" />
     </section>
 
     <footer class="entry-footer">
